cmake_minimum_required(VERSION 3.18)
project(blaze_hello VERSION 0.0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(Blaze REQUIRED)
add_executable(blaze_hello hello.cc)
target_link_libraries(blaze_hello PRIVATE sourcemeta::core::json)
target_link_libraries(blaze_hello PRIVATE sourcemeta::core::jsonschema)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::compiler)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::evaluator)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::linter)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::test)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::output)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::configuration)
