cmake_minimum_required(VERSION 3.18)
project(blaze_hello VERSION 0.0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(Blaze REQUIRED)
add_executable(blaze_hello hello.cc)
target_link_libraries(blaze_hello PRIVATE sourcemeta::core::json)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::compiler)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::evaluator)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::test)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::output)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::configuration)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::alterschema)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::codegen)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::documentation)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::editor)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::foundation)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::frame)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::bundle)
target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::format)
